--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "shuffle",
+  "name": "minesweeper2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://awojciak.github.io/Shuffle",
+  "homepage": "https://awojciak.github.io/Minesweeper",
   "dependencies": {
-    "gh-pages": "^2.0.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -15,7 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
 	"predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+	"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
